--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -4,42 +4,115 @@ on:
   push
 
 jobs:
-  macos_build:
+  AudioPerformanceTest:
     runs-on: macos-latest
-
     steps:
     - uses: actions/checkout@v2
-
     - name: Build Debug
       shell: bash
       run: |
-        rm -Rf cmake-build
         cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
         cmake --build cmake-build --target AudioPerformanceTest -- -j4
-        cmake --build cmake-build --target AudioPluginHost -- -j4
-        cmake --build cmake-build --target BinaryBuilder -- -j4
-        cmake --build cmake-build --target DemoRunner -- -j4
-        cmake --build cmake-build --target NetworkGraphicsDemo -- -j4
-        cmake --build cmake-build --target Projucer -- -j4
-        cmake --build cmake-build --target UnitTestRunner -- -j4
-
-    - name: Unit Tests Debug
-      shell: bash
-      run: cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Debug/UnitTestRunner
-
     - name: Build Release
       shell: bash
       run: |
-        rm -Rf cmake-build
         cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
         cmake --build cmake-build --target AudioPerformanceTest -- -j4
-        cmake --build cmake-build --target AudioPluginHost -- -j4
-        cmake --build cmake-build --target BinaryBuilder -- -j4
-        cmake --build cmake-build --target DemoRunner -- -j4
-        cmake --build cmake-build --target NetworkGraphicsDemo -- -j4
-        cmake --build cmake-build --target Projucer -- -j4
-        cmake --build cmake-build --target UnitTestRunner -- -j4
 
+  AudioPluginHost:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Debug
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build --target AudioPluginHost -- -j4
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build --target AudioPluginHost -- -j4
+
+  BinaryBuilder:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Debug
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build --target BinaryBuilder -- -j4
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build --target BinaryBuilder -- -j4
+
+  DemoRunner:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Debug
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build --target DemoRunner -- -j4
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build --target DemoRunner -- -j4
+
+  NetworkGraphicsDemo:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Debug
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build --target NetworkGraphicsDemo -- -j4
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build --target NetworkGraphicsDemo -- -j4
+
+  Projucer:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Debug
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build --target Projucer -- -j4
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build --target Projucer -- -j4
+
+  UnitTestRunner:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Debug
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build --target UnitTestRunner -- -j4
+    - name: Unit Tests Debug
+      shell: bash
+      run: cmake-build/examples/DemoRunner/DemoRunner_artefacts/Debug/UnitTestRunner
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build --target UnitTestRunner -- -j4
     - name: Unit Tests Release
       shell: bash
-      run: cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Release/UnitTestRunner
+      run: cmake-build/examples/DemoRunner/DemoRunner_artefacts/Release/UnitTestRunner
+
+
