--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -8,106 +8,93 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target AudioPerformanceTest --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target AudioPerformanceTest -- -j4
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target AudioPerformanceTest --config Release -- -j4
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target AudioPerformanceTest -- -j4
 
   AudioPluginHost:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target AudioPluginHost --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target AudioPluginHost -- -j4
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target AudioPluginHost --config Release -- -j4
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target AudioPluginHost -- -j4
 
   BinaryBuilder:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target BinaryBuilder --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target BinaryBuilder -- -j4
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target BinaryBuilder --config Release -- -j4
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target BinaryBuilder -- -j4
 
   DemoRunner:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target DemoRunner --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target DemoRunner -- -j4
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target DemoRunner --config Release -- -j4
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target DemoRunner -- -j4
 
   NetworkGraphicsDemo:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target NetworkGraphicsDemo --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target NetworkGraphicsDemo -- -j4
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target NetworkGraphicsDemo --config Release -- -j4
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target NetworkGraphicsDemo -- -j4
 
   Projucer:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target Projucer --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target Projucer -- -j4
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target Projucer --config Release -- -j4
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target Projucer -- -j4
 
   UnitTestRunner:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
-      shell: bash
-      run: cmake --build cmake-build --target UnitTestRunner --config Debug -- -j4
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target UnitTestRunner -- -j4
     - name: Unit Tests Debug
-      shell: bash
-      run: |
-        find . -name UnitTestRunner -type f
-      # cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Debug/UnitTestRunner
+      run: cmake-debug/extras/UnitTestRunner/UnitTestRunner_artefacts/Debug/UnitTestRunner
     - name: Build Release
-      shell: bash
-      run: cmake --build cmake-build --target UnitTestRunner --config Release -- -j4
-    - name: Unit Tests Release
-      shell: bash
       run: |
-        find . -name UnitTestRunner -type f
-      # cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Release/UnitTestRunner
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target UnitTestRunner -- -j4
+    - name: Unit Tests Release
+      run: cmake-release/extras/UnitTestRunner/UnitTestRunner_artefacts/Release/UnitTestRunner
