--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -8,102 +8,109 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target AudioPerformanceTest --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target AudioPerformanceTest
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target AudioPerformanceTest --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target AudioPerformanceTest
 
   AudioPluginHost:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target AudioPluginHost --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target AudioPluginHost
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target AudioPluginHost --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target AudioPluginHost
 
   BinaryBuilder:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target BinaryBuilder --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target BinaryBuilder
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target BinaryBuilder --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target BinaryBuilder
 
   DemoRunner:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target DemoRunner --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target DemoRunner
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target DemoRunner --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target DemoRunner
 
   NetworkGraphicsDemo:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target NetworkGraphicsDemo --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target NetworkGraphicsDemo
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target NetworkGraphicsDemo --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target NetworkGraphicsDemo
 
   Projucer:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target Projucer --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target Projucer
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target Projucer --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target Projucer
 
   UnitTestRunner:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Configure
-      shell: bash
-      run: cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON
     - name: Build Debug
       shell: bash
-      run: cmake --build cmake-build --target UnitTestRunner --config Debug
+      run: |
+        cmake -B cmake-debug -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-debug --target UnitTestRunner
     - name: Unit Tests Debug
       shell: bash
-      run: cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Debug/UnitTestRunner.exe
+      run: cmake-debug/extras/UnitTestRunner/UnitTestRunner_artefacts/Debug/UnitTestRunner.exe
     - name: Build Release
       shell: bash
-      run: cmake --build cmake-build --target UnitTestRunner --config Release
+      run: |
+        cmake -B cmake-release -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-release --target UnitTestRunner
     - name: Unit Tests Release
       shell: bash
-      run: cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Release/UnitTestRunner.exe
+      run: cmake-release/extras/UnitTestRunner/UnitTestRunner_artefacts/Release/UnitTestRunner.exe
