--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -50,10 +50,10 @@ function(_juce_add_pips)
     endforeach()
 endfunction()
 
-add_subdirectory(ARA/ARAPluginDemo)
 add_subdirectory(Audio)
 add_subdirectory(BLOCKS)
 add_subdirectory(DSP)
 add_subdirectory(GUI)
 add_subdirectory(Plugins)
+add_subdirectory(Plugins/ARAPluginDemo)
 add_subdirectory(Utilities)
